# migrate

./: .env  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: claude.yml  data-pipeline.yml  deploy-client-side.yaml  gh-pages.yml  github-pages.yml  python-app.yml
assets/: cost_of_living.json
assets/master/: city_and_country.json  coordinates.json
assets/summary/: cost_of_living.json  happiness_qol.json
cleansing/: pyproject.toml
cleansing/cleansing/: cost_of_living.py  summarize.py
cleansing/tests/: test_cost_of_living.py  test_summarize.py
client-side/: .prettierrc  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
client-side/.claude/: settings.local.json
client-side/src/: App.css  App.jsx  App.tsx  card-styles-airbnb.css  card-styles.css  index.css  main.tsx  types.ts
client-side/src/components/: Button.tsx  Card.tsx  CitySelector.jsx  CitySelector.tsx  ComparisonChart.jsx  ComparisonChart.tsx  CostOfLiving.tsx  DataCard.jsx  (+13 more)
collection/: Untitled.ipynb  pyproject.toml
collection/.claude/: settings.local.json
collection/collection/: city_to_country.py  cleanse_cost_of_living.py  cost_of_living.py  cpi.py  crime.py  happiness.py  labor.py  labour.py  main.py  quality_of_life.py  quolity_of_life.py  summarize.py  task.py
collection/collection/cleanse/: __init__.py  cleanse_utils.py  cost_of_living.py  crime.py  happiness.py  quality_of_life.py  weather.py
collection/collection/master/: __init__.py  city_and_country.py  city_to_country.py  coordinates.py
collection/collection/raw/: __init__.py  coordinates.py  cost_of_living.py  cpi.py  crime.py  labour.py  quality_of_life.py  weather.py
collection/collection/summary/: __init__.py  cost_of_living.py  happiness_qol.py
collection/tests/: test_all.py  test_city_and_country.py  test_city_to_country.py  test_cleanse_cost_of_living.py  test_coordinates.py  test_cost_of_living.py  test_cpi.py  test_crime.py  test_happiness.py  test_happiness_qol.py  test_labour.py  test_lib.py  test_quality_of_life.py  test_quolity_of_life.py  test_summarise_cost_of_living.py  test_summarize.py  test_weather.py
data/: annual_growth_rate_per_worker.json  cost_of_living.json  cost_of_living_cleansed.json  cpi.json  crime.json  happiness.json  labour_rights.json  quolity_of_life.json  summary_amsterdam.json  summary_bangkok.json  summary_barcelona.json  summary_berlin.json  summary_brisbane.json  summary_bristol.json  summary_copenhagen.json  summary_dublin.json  summary_glasgow.json  summary_hong_kong.json  summary_kuala_lumpur.json  summary_london.json  summary_manchester.json  summary_mumbai.json  summary_new_york.json  summary_oslo.json  summary_paris.json  summary_seattle.json  summary_seoul.json  summary_shanghai.json  summary_singapore.json  summary_stockholm.json  summary_taipei.json  summary_tokyo.json  unemployment_rate_disability.json  women_in_managerial_position.json  women_in_senior_and_middle_position.json  youth_neet_proportion.json
data-collection/: pyproject.toml
data-collection/data_collection/: collect_cpi.py  collect_world_happiness.py  cost_of_living.py  cpi.py  dataset.db  happiness.py  labor.py  playground.ipynb  task.py
data-collection/tests/: test_cpi.py  test_happiness.py  test_labor.py  test_lib.py  test_living_of_cost.py
docs/: features.md
explore/: pyproject.toml
explore/explore/: playground.ipynb
explore/output/: annual_growth_rate_per_worker  average_hourly_earnings.txt  cost_of_living  cost_of_living.txt  cpi  happiness  happiness.txt  informal_employment  labour_rights  social_protection  unemployment_rate.txt  unemployment_rate_disability  women_in_managerial_position  women_in_senior_and_middle_position  working_poverty_rate.txt  youth_neet_proportion.txt
presentation/: app_overview.md  app_overview_ja.md  architecture_diagram.md  architecture_diagram_ja.md  development_guide.md  development_guide_ja.md
presentation/en/: architecture_overview.md  development_guide.md  system_components_explained.md
presentation/jp/: architecture_overview.md  development_guide.md
server-side/: Dockerfile  README.md  pyproject.toml
server-side/.claude/: settings.local.json
server-side/server_side/: cpi.py  main.py
server-side/tests/: test_main.py
utils/: pyproject.toml
utils/tests/: test_get_config.py
utils/utils/: get_config.py  utils.py
(+65 files in other folders)
