[tool.poetry]
name = "cleansing"
version = "0.1.0"
description = ""
authors = ["Yoichi Ojima <yoichiojima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
collection = {path = "../collection", develop = true}
utils = {path = "../utils", develop = true}
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
