[tool.poetry]
name = "collection"
version = "0.1.0"
description = ""
authors = ["Yoichi Ojima <yoichiojima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
kagglehub = "^0.3.4"
python-dotenv = "^1.0.1"
bs4 = "^0.0.2"
pyyaml = "^6.0.2"
luigi = "^3.6.0"
requests = "^2.32.3"
scikit-learn = "^1.6.0"
utils = {path = "../utils"}


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.1"
pandas = "^2.2.3"
pytest = "^8.3.3"
build = "^1.2.2.post1"
ipython = "^8.30.0"
tabulate = "^0.9.0"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 127