[tool.poetry]
name = "server-side"
version = "0.1.0"
description = ""
authors = ["yo <yoichiojima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
httpx = "^0.27.2"


[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
