[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Yoichi Ojima <yoichiojima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 127