[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Yoichi Ojima <yoichiojima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyyaml = "^6.0.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 127